processed/jira/txt/LU/LU-12844.txt
Key:        LU-12844
Summary:    error: ‘strncpy’ specified bound depends on the length of the source argument
Link:       https://jira.whamcloud.com/browse/LU-12844
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Jian Yu
Reporter:   Jian Yu
Created:    Wed, 9 Oct 2019 20:06:31 +0000
Updated:    Thu, 21 Nov 2019 21:52:08 +0000
Resolved:   Wed, 16 Oct 2019 01:42:56 +0000

--- Description ---
While building Lustre against kernel 4.19.67 on Debian 10, I hit the following failure:

liblnetconfig.c: In function ‘lustre_lnet_parse_nids’:
liblnetconfig.c:320:3: error: ‘strncpy’ specified bound depends on the length of the source argument [-Werror=stringop-overflow=]
   strncpy(entry, cur, len - 1);
   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
liblnetconfig.c:310:10: note: length computed here
    len = strlen(cur) + 1;
          ^~~~~~~~~~~
cc1: all warnings being treated as errors

--- Comment (gerrit, Thu, 21 Nov 2019 07:36:17 +0000) ---
Oleg Drokin (green@whamcloud.com) merged in patch https://review.whamcloud.com/36418/

Subject: LU-12844 lnet: fix strncpy bound error

Project: fs/lustre-release

Branch: b2_12

Current Patch Set: 

Commit: 3dc4d86a6795ae8a6af46af2c9b17c621ec18dde

--- Comment (pjones, Wed, 16 Oct 2019 01:42:56 +0000) ---
Landed for 2.13

--- Comment (gerrit, Wed, 16 Oct 2019 01:34:31 +0000) ---
Oleg Drokin (green@whamcloud.com) merged in patch https://review.whamcloud.com/36417/

Subject: LU-12844 lnet: fix strncpy bound error

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: cebda7a478f9943f10b9a3388377c61a54957a87

--- Comment (gerrit, Wed, 9 Oct 2019 21:42:41 +0000) ---
Jian Yu (yujian@whamcloud.com) uploaded a new patch: https://review.whamcloud.com/36418

Subject: LU-12844 lnet: fix strncpy bound error

Project: fs/lustre-release

Branch: b2_12

Current Patch Set: 1

Commit: 519581ed81d8d2f12355ec53e0493c61838424b5

--- Comment (gerrit, Wed, 9 Oct 2019 21:35:44 +0000) ---
Jian Yu (yujian@whamcloud.com) uploaded a new patch: https://review.whamcloud.com/36417

Subject: LU-12844 lnet: fix strncpy bound error

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 63e3b0263cfc936cb91c92abda13c7fb4813d41d
